test: 테스트 오류 개선